@@ -64,6 +64,7 @@ Misc:
  - Qt: Optimize logo drawing
  - Qt: Move frame upload back onto main thread
  - All: Enable link-time optimization
+ - GBA Thread: Make GBASyncWaitFrameStart time out
 
 0.1.1: (2015-01-24)
 Bugfixes:
